@@ -1,0 +1,11 @@
+<?php
+
+$eZTemplateOperatorArray = array();
+
+
+$eZTemplateOperatorArray[] = array( 'script' => 'extension/ezgmaplocation/autoloads/ezgmltemplateoperators.php',
+                                    'class' => 'ezgmlTemplateOperators',
+                                    'operator_names' => array( 'fetch_by_location'
+) );
+
+?>
